# Generative-Content-Pipeline

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: merge.yml  publish-pypi.yml  push.yml  release.yml  terraform.yml  test.yml
backend/src/: api.py  db.py  settings.py
backend/src/core/: user.py
backend/src/endpoints/: user.py
backend/src/models/: books.py  user.py
backend/src/schemas/: base.py  user.py
backend/src/utils/: security.py
infra/remote/: backend.tf  main.tf  terraform.tfstate  terraform.tfstate.backup  terraform.tfvars  tfplan  variables.tf  variables.tfvars
ml/: pyproject.toml
ml/ml/inference/: opensora.py
notebooks/: DownloadGutenberg.ipynb
opensora/: Dockerfile  pyproject.toml
opensora/configs/vae/inference/: video_dc_ae.py
opensora/notebooks/: opensora.ipynb
opensora/opensora/: setup.py
opensora/opensora/utils/: config.py
scraping/: pyproject.toml
scraping/generative_content_pipeline_scraping/: data.py
scraping/notebooks/: Dataset.ipynb  DownloadGutenberg.ipynb  opensora.ipynb
scraping/scraping/: data.py  settings.py  tables.py
training/: pyproject.toml
training/training/: dataset.py
video_generation/: pyproject.toml
