[project]
name = "generative-content-pipeline"
version = "0.1.4"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.9.5"
dependencies = [
    "npx>=0.1.6",
    "prettier>=0.0.7",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pytest>=8.4.1",
    "jupyter",
    "gutenbergpy",
    "gutenberg",

]
lint = [
    "ruff>=0.12.0",
]
scraping = [
    "gutenberg",
]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[tool.setuptools]
packages = ["generative_content_pipeline"]
