[project]
name = "generative-content-pipeline"
version = "0.1.5"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "npx>=0.1.6",
    "prettier>=0.0.7",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pytest>=8.4.1",
    "jupyter",
    "gutenbergpy",
    "cssutils",
    "Pillow"

]
lint = [
    "ruff>=0.12.0",
]


[tool.uv.workspace]
members = [
    "scraping", 
    "video_generation", 
    "training"
]

[tool.uv.sources]
scraping = { workspace = true }
training = { workspace = true }
video_generation = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "scraping/scraping", 
    "video_generation/video_generation", 
    "training/training"
]
