[project]
name = "ml"
version = "0.1.0"
description = "Module which provides logic to train various models with data in the chosen infrastructure"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch",
    "torchvision"
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126" },
]
torchvision = [
  { index = "pytorch-cu126"},
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
