[project]
name = "scraping"
version = "0.1.0"
description = "Module which provides scraping logic and stores data in the chosen infrastructure"
readme = "README.md"
dependencies = [
    "boto3",
    "sqlalchemy",
    "pydantic",
    "pydantic-settings",
    "asyncpg",
    "psycopg2",
    "aiosqlite",
    "bs4"
]

[project.optional-dependencies]
dev = ["ipykernel"]

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["scraping"]
